--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     compile "org.jetbrains.anko:anko-common:0.8.3"
+    implementation files('libs/BixolonLabelPrinterLibraryV128.jar')
+    implementation files('libs/core-3.2.0.jar')
+    implementation files('libs/javase-3.2.0.jar')
+    implementation files('libs/libcommon.jar')
 }
